--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,10 +1,13 @@
 doctype html
 html(lang="en")
-   head
+   head.page
       meta(charset="UTF-8")
       meta(http-equiv="X-UA-Compatible", content="IE=edge")
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
+      link(rel="stylesheet", href="./css/normalize.min.css")
       link(rel="stylesheet", href="./css/style.min.css")
       title Document
-   body 
-      h1 Hello!
+   body.page__body 
+      include common/header.pug
+      include common/main.pug
+      include common/footer.pug
